[gd_scene load_steps=8 format=2]

[ext_resource path="res://classes/BaseLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://classes/Stage.gd" type="Script" id=2]
[ext_resource path="res://characters/tower/tower.tscn" type="PackedScene" id=3]
[ext_resource path="res://obstacles/vertical_mountain.tscn" type="PackedScene" id=4]
[ext_resource path="res://obstacles/hotizontal_mountain.tscn" type="PackedScene" id=5]
[ext_resource path="res://tools/fruit_location.tscn" type="PackedScene" id=6]
[ext_resource path="res://tools/light_target.tscn" type="PackedScene" id=7]

[node name="level_00" instance=ExtResource( 1 )]

script = ExtResource( 2 )

[node name="raccoon_hangar" parent="hangars" index="0"]

position = Vector2( 1490, -710 )

[node name="enemy_hangar" parent="hangars" index="1"]

position = Vector2( 20, 620 )

[node name="tower" parent="battlefield" index="0" instance=ExtResource( 3 )]

position = Vector2( -1070, 480 )
guard_target = NodePath("../../indicators/light_target")
found_duration = 1.0

[node name="tower2" parent="battlefield" index="1" instance=ExtResource( 3 )]

position = Vector2( -1030, -520 )
guard_target = NodePath("../../indicators/light_target2")
found_duration = 1.0

[node name="tower3" parent="battlefield" index="2" instance=ExtResource( 3 )]

position = Vector2( 10, -300 )
guard_target = NodePath("../../indicators/light_target6")
found_duration = 1.0

[node name="tower4" parent="battlefield" index="3" instance=ExtResource( 3 )]

position = Vector2( 580, -20 )
guard_target = NodePath("../../indicators/light_target3")
found_duration = 1.0

[node name="tower5" parent="battlefield" index="4" instance=ExtResource( 3 )]

position = Vector2( 1370, -210 )
guard_target = NodePath("../../indicators/light_target4")
found_duration = 1.0

[node name="tower6" parent="battlefield" index="5" instance=ExtResource( 3 )]

position = Vector2( 810, 310 )
guard_target = NodePath("../../indicators/light_target5")
found_duration = 1.0

[node name="tower7" parent="battlefield" index="6" instance=ExtResource( 3 )]

position = Vector2( -520, 20 )
guard_target = NodePath("../../indicators/light_target7")
found_duration = 1.0

[node name="tower8" parent="battlefield" index="7" instance=ExtResource( 3 )]

position = Vector2( 20, 290 )
guard_target = NodePath("../../indicators/light_target8")
found_duration = 1.0

[node name="vertical_mountain" parent="battlefield" index="8" instance=ExtResource( 4 )]

position = Vector2( -690, 10 )

[node name="vertical_mountain2" parent="battlefield" index="9" instance=ExtResource( 4 )]

position = Vector2( 870, -20 )

[node name="hotizontal_mountain" parent="battlefield" index="10" instance=ExtResource( 5 )]

position = Vector2( 20, -170 )

[node name="hotizontal_mountain2" parent="battlefield" index="11" instance=ExtResource( 5 )]

position = Vector2( 0, 170 )

[node name="fruit_location" parent="." index="6"]

editor/display_folded = true

[node name="fruit_location" parent="fruit_location" index="0" instance=ExtResource( 6 )]

position = Vector2( -180, 10 )

[node name="fruit_location2" parent="fruit_location" index="1" instance=ExtResource( 6 )]

position = Vector2( -100, -510 )

[node name="fruit_location3" parent="fruit_location" index="2" instance=ExtResource( 6 )]

position = Vector2( -300, 270 )

[node name="fruit_location4" parent="fruit_location" index="3" instance=ExtResource( 6 )]

position = Vector2( 640, 380 )

[node name="fruit_location5" parent="fruit_location" index="4" instance=ExtResource( 6 )]

position = Vector2( 1000, -220 )

[node name="fruit_location6" parent="fruit_location" index="5" instance=ExtResource( 6 )]

position = Vector2( -1110, 160 )

[node name="fruit_location7" parent="fruit_location" index="6" instance=ExtResource( 6 )]

position = Vector2( -540, -620 )

[node name="fruit_location8" parent="fruit_location" index="7" instance=ExtResource( 6 )]

position = Vector2( 180, 640 )

[node name="indicators" parent="." index="7"]

editor/display_folded = true

[node name="light_target" parent="indicators" index="0" instance=ExtResource( 7 )]

position = Vector2( -720, 220 )

[node name="light_target2" parent="indicators" index="1" instance=ExtResource( 7 )]

position = Vector2( -680, -230 )

[node name="light_target3" parent="indicators" index="2" instance=ExtResource( 7 )]

position = Vector2( 220, -10 )

[node name="light_target4" parent="indicators" index="3" instance=ExtResource( 7 )]

position = Vector2( 1350, 230 )

[node name="light_target5" parent="indicators" index="4" instance=ExtResource( 7 )]

position = Vector2( 810, 650 )

[node name="light_target6" parent="indicators" index="5" instance=ExtResource( 7 )]

position = Vector2( 40, -680 )

[node name="light_target7" parent="indicators" index="6" instance=ExtResource( 7 )]

position = Vector2( -30, 0 )

[node name="light_target8" parent="indicators" index="7" instance=ExtResource( 7 )]

position = Vector2( 40, 660 )


